trying to fix the gap?

--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,7 @@ body {
 .menu_header {
   display: flex;
   align-items: baseline;
-  gap: 2%;
+  gap: 3%;
 }
 
 .kanit-thin {
